--- a/Desktop/RecrutingProject-main/src/app/components/cv/cv.component.html
+++ b/Desktop/RecrutingProject-main/src/app/components/cv/cv.component.html
@@ -7,7 +7,7 @@
         <app-list [listCvs]="cvs" (listEvent)="receiveFromList($event)"></app-list>
 
     </div>
-    <div>
+    <div *ngIf="cvToDisplay !=null">
         <app-detail [cvToDisplay]="cvToDisplay"></app-detail>
 
     </div>
