--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,10 @@
 <div class="body">
-    <!-- <div class="row">
-        <div class="col-9">
-            <app-cv></app-cv>
-        </div>
-        <div class="col-3">
-            <app-cv-embauches></app-cv-embauches>
-        </div>
-    </div> -->
 
+    <div class="container text-center">
+        <app-navbar></app-navbar>
+        <app-router-simulator></app-router-simulator>
 
-    <!-- <app-mini-word></app-mini-word> -->
+        <router-outlet></router-outlet>
+    </div>
 
-    <app-add-cv></app-add-cv>
-
-    <router-outlet></router-outlet>
 </div>
