--- a/src/app/components/detail/detail.component.html
+++ b/src/app/components/detail/detail.component.html
@@ -21,7 +21,11 @@
                 <br> <span> {{cvToDisplay?.job}} </span>
                 <br> {{cvToDisplay?.motCles}}
                 <br> {{cvToDisplay?.citation}}<br>
+                <br>
                 <button type="button" class="btn btn-primary" (click)="embaucher()">Embaucher</button>
+                <p> </p>
+                <button type="button" class="btn btn-primary" (click)="viewDetails()">Detail</button>
+
 
 
             </div>
