--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -16,6 +16,12 @@
                 <li class="nav-item">
                     <a class="nav-link " [routerLink]="['textEditor']" routerLinkActive="active">Text Editor</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link " [routerLink]="['login']" routerLinkActive="active">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link " [routerLink]="['slider']" routerLinkActive="active">Slider</a>
+                </li>
             </ul>
 
         </div>
