--- a/src/app/components/cv/cv.component.html
+++ b/src/app/components/cv/cv.component.html
@@ -6,7 +6,9 @@
 
     </div>
     <div>
-        <app-detail [cvToDisplay]="cvToDisplay"></app-detail>
+        <!-- <app-detail [cvToDisplay]="cvToDisplay"></app-detail> -->
+        <app-detail></app-detail>
+
 
     </div>
 
