--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -1,9 +1,4 @@
-<div class="container">
-    <div class="row circle">
-
-    </div>
-    <br>
-    <br>
-    <br>
-    <button (click)="onColorsToggle()">hdf</button>
+<div>
+    <img src="../../../assets/images/{{image}}" height="150px" width="150px" style="border-radius: 50%;
+    ">
 </div>
